add Events, seeded, set up event show page

--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Select which story you would like to contribute to!<h1>
+<ul>
   <% @stories.each do |story| %>
-    <%= link_to story.name, story_path(story.id) %>
+    <li><%= link_to story.name, story_path(story.id) %></li>
   <% end %>
+</ul>
