--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,19 +1,14 @@
 <h1> <%= @story.name %> </h1>
 <p> <%= @story.description %> </p>
 <ul>
-<% @narrations.each do |narration| %>
-  <%= narration.body %>
-<% end %>
-</ul>
-<div>
-  <%= form_for([@story, @narration]) do |f| %>
-    <div class="field">
-      <%= f.label :body %><br />
-      <%= f.text_field :body %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Confirm Action" %>
-    </div>
+  <% @events.each do |event| %>
+    <%
+      if event.selected_possibility_id
+        possibility =  Possibility.find(event.selected_possibility_id).body
+      else
+        possibility = "What could be next?"
+      end
+    %>
+    <li><%= link_to possibility, story_event_path(@story.id, event.id) %></li>
   <% end %>
-</div>
+</ul>
