--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,17 +1,2 @@
-<% @possibilities.each do |possibility| %>
-  <%= possibility.body %>
-<% end %>
-<div>
-  <% if !@event.selected_possibility_id %>
-    <%= form_for([@story, @event, @possibility]) do |f| %>
-      <div class="field">
-        <%= f.label :body %><br />
-        <%= f.text_field :body %>
-      </div>
-
-      <div class="actions">
-        <%= f.submit "Confirm Action" %>
-      </div>
-    <% end %>
-  <% end %>
+<div id='app'>
 </div>
