--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,5 +1,9 @@
 body{
   font-family: 'Roboto Condensed', sans-serif;
+  background-image: url("https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.wallpapersafari.com%2F41%2F82%2FCHsXax.jpg&f=1");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 form{
   margin: 0 auto;
@@ -11,7 +15,61 @@ p{
 }
 button{
   border-radius: 6px;
-  color: #ffffff;
+  background-color: #D48BFA;
+  font-family: 'Roboto Condensed', sans-serif;
+  margin: 0.5em 1em;
+  padding: 0.5em 0.75em 0.5em 0.5em;
+}
+.past{
+}
+.present{
+}
+.event{
+  margin: 10px;
+  padding: 10px;
+  border-radius: 30px;
+  background-color: #B5E583;
+}
+.scroll{
+  margin: auto;
+  margin-top: 10px;
+  width: 700px;
+  height: 500px;
+  overflow-y: scroll;
+}
+.story-header{
+  text-align: center;
+  margin: 50px 100px 10px;
+  padding: 10px;
+  border-radius: 30px;
+  background-color: #B5E583;
+}
+.story-description{
+  text-align: left;
+}
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #D48BFA;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
+input[type="submit"]{
+  border-radius: 6px;
+  background-color: #D48BFA;
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0.5em 1em;
   padding: 0.5em 0.75em 0.5em 0.5em;
