--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -8,6 +8,12 @@ body{
 form{
   width: 75%;
 }
+a:hover{
+  background-color: #D48BFA;
+  color: #ffffff;
+  padding: 6px;
+  border-radius: 5px;
+}
 p{
   margin: 0 1em;
   padding: 0;
@@ -48,6 +54,7 @@ div{
   text-align: center;
   display: block;
   margin-left: 10%;
+  margin-right: 10%;
   width: 500px;
 }
 .scroll{
@@ -59,10 +66,11 @@ div{
 }
 .story-header{
   text-align: center;
-  margin: 50px 100px 10px;
+  margin: 25px 100px 10px;
   padding: 10px;
   border-radius: 30px;
   background-color: #B5E583;
+  border-color:
 }
 .possibility-form{
   margin: 0 auto;
@@ -97,6 +105,9 @@ div{
 ::-webkit-scrollbar-thumb:hover {
   background: #b30000;
 }
+textarea{
+  box-shadow: 3px 3px 5px 6px rgb(135,205,235, 0.6);
+}
 input[type="submit"]{
   border-radius: 6px;
   background-color: #D48BFA;
@@ -104,20 +115,32 @@ input[type="submit"]{
   margin: 0.5em 1em;
   padding: 0.5em 0.75em 0.5em 0.5em;
 }
+input[type="submit"]:hover{
+  background-color: #b30000;
+}
 label{
-  background-color: #B5E583;
+  background-color: rgb(135,205,235, 0.8);
 }
 .vote{
   display: inline-block;
   vertical-align: top;
   padding: 10px;
 }
+.vote:hover{
+  background-color: #b30000;
+}
 .vote-counter{
   margin-left: 25%;
 }
 .last-event{
-  background-color: orange;
+  background-color: rgb(135,205,235, 0.5);
 }
 .possibility>p{
   vertical-align: center;
+}
+.back-button{
+  margin-left: 10%;
+  border-radius: 5px;
+  padding: 6px;
+  background-color: #B5E583;
 }
