--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -28,9 +28,8 @@ button{
   padding: 0.5em 0.75em 0.5em 0.5em;
   margin: 10px;
 }
-div{
-  margin-top: 10px;
-  margin-bottom: 10px;
+button:hover{
+  background-color: #b30000;
 }
 .block{
   display: block;
@@ -90,22 +89,19 @@ div{
 ::-webkit-scrollbar {
   width: 8px;
 }
-
-/* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
   border-radius: 10px;
 }
-
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: #D48BFA;
   border-radius: 10px;
 }
-
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #b30000;
+}
+label{
+  background-color: rgb(135,205,235, 0.8);
 }
 textarea{
   box-shadow: 3px 3px 5px 6px rgb(135,205,235, 0.6);
@@ -120,16 +116,10 @@ input[type="submit"]{
 input[type="submit"]:hover{
   background-color: #b30000;
 }
-label{
-  background-color: rgb(135,205,235, 0.8);
-}
 .vote{
   display: inline-block;
   vertical-align: top;
   padding: 10px;
-}
-.vote:hover{
-  background-color: #b30000;
 }
 .vote-counter{
   margin-left: 25%;
@@ -137,12 +127,27 @@ label{
 .last-event{
   background-color: rgb(135,205,235, 0.5);
 }
-.possibility>p{
-  vertical-align: center;
-}
 .back-button{
   margin-left: 10%;
   border-radius: 5px;
   padding: 6px;
   background-color: #B5E583;
+}
+
+#gallery {
+  columns: 4 200px;
+  margin: 50px 15vw;
+}
+#gallery img {
+  border: 3px solid #63444a;
+  border-radius: 10px;
+  box-shadow: 4px 4px 6px;
+  filter: grayscale(70%);
+  object-fit: cover;
+  opacity: 0.6;
+  transition: 0.75s;
+}
+#gallery img:hover {
+  filter: grayscale(0%);
+  opacity: 1;
 }
