created functional buttons in the toolbox to change the toolbox's display

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -190,7 +190,7 @@ input[type="submit"]:hover{
   display: block;
   margin-left: 25%;
 }
-.thesaurus{
+.toolkit{
   display: inline-block;
   width: 33%;
   vertical-align: top;
